<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_total"
        android:name="com.example.moneyup.ui.total.TotalFragment"
        android:label="@string/title_total"
        tools:layout="@layout/fragment_total"/>
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.moneyup.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add"/>
    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.moneyup.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories"/>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.moneyup.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"/>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.moneyup.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

</navigation>