<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30BA8F">


    <Button
        android:id="@+id/button"
        android:layout_width="164dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#D0F0C0"
        android:textColor="@color/black"
        android:text="@string/botton_table"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="167dp"
        android:layout_height="72dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#D0F0C0"
        android:textColor="@color/black"
        android:text="@string/button_graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="89dp"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_border"
                android:padding="16dp"
                android:text="@string/item_1"
                android:textColor="#2E7D32"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_border"
                android:padding="16dp"
                android:text="@string/item_2"
                android:textColor="#2E7D32"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_border"
                android:padding="16dp"
                android:text="@string/item_3"
                android:textColor="#2E7D32"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>